<resources>
    <string name="app_name">Meal Queue</string>

    <string-array name="time_array">
        <item>Minutes</item>
        <item>Hours</item>
    </string-array>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Don\'t have an account? Sign up here!</string>
    <string name="btn_link_to_login">Already registered. Login here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="nav_home">Home</string>
    <string name="nav_recipes">Recipes</string>
    <string name="nav_grocery">Grocery</string>
    <string name="mealplan_addmeal">Add Meal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="final_add_recipe_btn">ADD RECIPE</string>
    <string name="final_add_recipe_instructions">Add ingredients then tap \'ADD RECIPE\' to finish.</string>
    <string name="add_ingredients_amount_hint">Amount</string>
    <string name="add_ingredients_name_hint">Ingredient Name</string>
    <string name="add_recipe_next_btn">NEXT</string>
    <string name="add_recipe_name_textview">Recipe Name</string>
    <string name="add_recipe_directions_textview">Directions</string>
    <string name="sign_up_btn">Don\'t have an account? Sign up here!</string>
    <string name="recipe_name_textview">Recipe Name</string>
    <string name="recipe_ingredients_textview">Ingredients</string>
    <string name="recipe_directions_textview">Directions</string>
    <string name="recipe_driections_textview_placeholder">Make Yummy!</string>
    <string name="recipe_delete_textview">DELETE</string>
    <string name="select_sync_start_date">Select Sync Start Date</string>
    <string name="select_sync_end_date">Select Sync End Date</string>
    <string name="sync_helper_btn">Finish SYNC</string>
    <string name="grocery_sync_btn">Sync</string>
    <string name="grocery_clear_btn">Remove All</string>
    <string name="grocery_item_name_hint">Item Name</string>
    <string name="grocery_item_amount_hint">Item Amount</string>
    <string name="grocery_add_item_btn">Add</string>
    <string name="add_new_recipe_btn">ADD</string>
    <string name="ingredients_item_name_hint">Item Name</string>
    <string name="ingredients_item_amount_hint">Item Amount</string>
    <string name="recipe_name_btn">Recipe Name</string>
    <string name="nav_planner">Meal Plan</string>
</resources>
